--- a/package.json
+++ b/package.json
@@ -8,10 +8,22 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "latest"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "turbo": "latest",
+    "typescript": "^5.4.5"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "i18next": "^23.11.5",
+    "lucide-react": "^0.379.0",
+    "next": "^14.2.3",
+    "next-i18next": "^15.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2"
   }
 }
