--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "i18next": "^23.11.5",
     "lucide-react": "^0.379.0",
     "next": "^14.2.3",
