--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,27 +30,28 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-picker-element": "^1.21.3",
-    "emoji-picker-react": "^4.9.4",
+    "emoji-picker-react": "^4.10.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
-    "pg": "^8.11.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "pg": "^8.12.0",
+    "react": "^18.3.1",
+    "react-big-calendar": "^1.13.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.2",
     "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
