--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
