--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,9 +33,11 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "9.0.2",
     "lucide-react": "0.395.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "nookies": "^2.5.2",
     "react": "18",
+    "react-big-calendar": "^1.13.0",
     "react-dom": "18",
     "react-hook-form": "7.51.5",
     "tailwind-merge": "2.3.0",
@@ -47,6 +49,7 @@
     "@types/node": "20.14.2",
     "@types/nodemailer": "6.4.15",
     "@types/react": "18.3.3",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "18.3.0",
     "@types/uuid": "9.0.8",
     "eslint": "8.57.0",
