--- a/package.json
+++ b/package.json
@@ -5,16 +5,32 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "turbo": "latest",
-    "typescript": "^5.4.5"
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "eslint": "8.57.0",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.7",
+    "prettier": "2.8.8",
+    "turbo": "2.0.7",
+    "typescript": "5.4.5"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
+  },
+  "lint-staged": {
+    "apps/**/*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ],
+    "packages/**/*.ts": [
+      "eslint --fix"
+    ],
+    "*.{ts,tsx,js,jsx,html,css,md}": [
+      "prettier --write"
+    ]
   }
 }
