--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@custom-react-hooks/use-media-query": "^1.4.19",
+    "@custom-react-hooks/use-media-query": "1.4.19",
     "@hookform/resolvers": "3.6.0",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "1.0.4",
@@ -18,7 +18,7 @@
     "@radix-ui/react-hover-card": "1.0.7",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-progress": "1.0.3",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-separator": "1.0.3",
@@ -30,30 +30,30 @@
     "axios": "1.7.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "1.0.0",
     "emoji-picker-element": "1.21.3",
     "emoji-picker-react": "4.10.0",
-    "js-cookie": "^3.0.5",
+    "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
     "lucide-react": "0.395.0",
-    "moment": "^2.30.1",
+    "moment": "2.30.1",
     "next": "14.2.4",
-    "nookies": "^2.5.2",
+    "nookies": "2.5.2",
     "react": "18",
-    "react-big-calendar": "^1.13.0",
+    "react-big-calendar": "1.13.0",
     "react-dom": "18",
     "react-hook-form": "7.51.5",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
-    "vaul": "^0.9.1",
+    "vaul": "0.9.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
+    "@types/js-cookie": "3.0.6",
     "@types/node": "20.14.2",
     "@types/nodemailer": "6.4.15",
     "@types/react": "18.3.3",
-    "@types/react-big-calendar": "^1.8.9",
+    "@types/react-big-calendar": "1.8.9",
     "@types/react-dom": "18.3.0",
     "@types/uuid": "9.0.8",
     "eslint": "8.57.0",
