--- a/apps/backend/.template.env
+++ b/apps/backend/.template.env
@@ -1,11 +1,26 @@
-PORT=
+PORT=""
 
-DB_PORT=
-DB_HOST=
-DB_NAME=
-DB_PASSWORD=
-DB_USERNAME=
+BASE_URL=""
 
-NODE_ENV=
+SMTP_HOST=""
+SMTP_PORT=""
+SMTP_USER=""
+SMTP_PASS=""
 
-JWT_SECRET=
+DB_PORT=""
+DB_HOST=""
+DB_NAME=""
+DB_PASSWORD=""
+DB_USERNAME=""
+
+NODE_ENV=""
+
+JWT_SECRET=""
+
+MICROSOFT_CLIENT_ID=""
+MICROSOFT_CLIENT_SECRET=""
+MICROSOFT_CALLBACKURL=""
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CALLBACKURL=""
