--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,17 +24,22 @@
     "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.0.0",
     "@nestjs/jwt": "10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/typeorm": "10.0.2",
     "axios": "1.7.2",
     "bcrypt": "5.1.1",
     "bcryptjs": "2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "1.4.6",
+    "joi": "^17.13.3",
     "jsonwebtoken": "9.0.2",
     "nodemailer": "6.9.13",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
+    "passport-microsoft": "^2.1.0",
     "pg": "8.12.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
@@ -44,6 +49,8 @@
     "@nestjs/cli": "10.0.0",
     "@nestjs/schematics": "10.0.0",
     "@nestjs/testing": "10.0.0",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.2",
     "@types/bcrypt": "5.0.2",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
