--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "10.0.2",
     "axios": "1.7.2",
     "bcrypt": "5.1.1",
@@ -38,6 +39,7 @@
     "pg": "8.12.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.20"
   },
   "devDependencies": {
