--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@custom-react-hooks/use-media-query": "1.4.19",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
     "@hookform/resolvers": "3.6.0",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "1.0.4",
@@ -20,6 +25,7 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-progress": "1.0.3",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
@@ -40,7 +46,6 @@
     "next": "14.2.4",
     "nookies": "2.5.2",
     "react": "18",
-    "react-big-calendar": "1.13.0",
     "react-dom": "18",
     "react-hook-form": "7.51.5",
     "tailwind-merge": "2.3.0",
@@ -53,7 +58,6 @@
     "@types/node": "20.14.2",
     "@types/nodemailer": "6.4.15",
     "@types/react": "18.3.3",
-    "@types/react-big-calendar": "1.8.9",
     "@types/react-dom": "18.3.0",
     "@types/uuid": "9.0.8",
     "eslint": "8.57.0",
