--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -62,6 +62,7 @@
     "@types/uuid": "9.0.8",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-import": "^2.31.0",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
